# MaiLuncher

./: .gitignore  README.md  build.py  build_pyinstaller.py  build_readme.md  icon_convert.py  launcher.py  main.py  pyproject.toml  requirements.txt
src/MaiGoi/: color_parser.py  config_manager.py  db_connector.py  flet_interest_monitor.py  meme_manager.py  mmc_downloader.py  process_manager.py  python_installer.py  state.py  toml_form_generator.py  ui_console_view.py  ui_env_editor.py  ui_settings_view.py  ui_views.py  utils.py
