[project]
name = "MaiLuncher"
version = "0.2.1"
description = "MaiLuncher Application"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "SengokuCola", email = "your.email@example.com" }
]
dependencies = [
  "flet",
  "psutil",
  "toml",
  "tomlkit",
  "httpx",
  "ansi2html"
]

[tool.flet]
app_path = "."
module_name = "main"
assets_dir = "src/assets"

[tool.flet.build.windows]
product_name = "MaiLuncher" 